# latex-book-to-html

./: .gitignore  LICENSE  README.md  book2html.py  pyproject.toml
examples/minimal-book/: main.tex
examples/minimal-book/chapters/: ch01.tex  ch02.tex
src/tex2html_book/: __init__.py  assemble.py  cli.py  resolve_tex.py  tex2html.py
src/tex2html_book/data/: skeleton.html
tests/: test_assemble.py  test_resolve.py  test_tex2html.py
